Добавил задержку переключения БД и предупреждение

--- a/config/k3s-db-balancer-01/haproxy.cfg
+++ b/config/k3s-db-balancer-01/haproxy.cfg
@@ -14,5 +14,5 @@ frontend k3s-db
 backend k3s-db
   mode tcp
   option mysql-check user haproxy-check
-  server k3s-db-01 k3s-db-01.lab.lan:3306 check on-marked-up shutdown-backup-sessions
-  server k3s-db-02 k3s-db-02.lab.lan:3306 check backup
+  server k3s-db-01 k3s-db-01.lab.lan:3306 check on-marked-up shutdown-backup-sessions rise 30
+  server k3s-db-02 k3s-db-02.lab.lan:3306 check backup rise 30
